--- a/packages/core/src/tegel-lite/components/tl-header/_tl-header-vars.scss
+++ b/packages/core/src/tegel-lite/components/tl-header/_tl-header-vars.scss
@@ -88,7 +88,7 @@
   /* Dark mode - override with dark colors */
   .tl-mode-dark .tl-header {
     --header-background: var(--scania-color-blue-900);
-    --header-nav-item: var(--color-icon-strong);
+    --header-nav-item: var(--scania-color-base-white);
     --header-item-hover: var(--scania-color-blue-800);
     --header-basic-element-border: var(--scania-color-blue-800);
     --header-basic-element-background-pressed: var(--scania-color-blue-800);
