--- a/packages/core/src/tegel-lite/components/tl-radio-button/tl-radio-button.scss
+++ b/packages/core/src/tegel-lite/components/tl-radio-button/tl-radio-button.scss
@@ -60,8 +60,10 @@
   }
 
   /* Focus */
-  &:focus-visible {
-    @include tds-focus-state;
+  &:focus-visible::after {
+    outline: 2px solid var(--component--focus-ring-color-strong);
+    box-shadow: 0 0 0 1px var(--component--focus-ring-color-discrete);
+    outline-offset: 1px;
   }
 
   /* Checked */
