--- a/packages/core/src/tegel-lite/components/tl-side-menu/_item.scss
+++ b/packages/core/src/tegel-lite/components/tl-side-menu/_item.scss
@@ -65,3 +65,11 @@
     }
   }
 }
+
+.traton .tl-side-menu__item {
+  padding: 12px;
+}
+
+.scania .tl-side-menu__item {
+  padding: 22px;
+}
