--- a/tokens/scss/component-stubs/folder-tabs.scss
+++ b/tokens/scss/component-stubs/folder-tabs.scss
@@ -33,7 +33,7 @@
   --component-folder-tabs-scroll-button-background-hover: var(--traton-color-grey-100);
   --component-folder-tabs-scroll-button-background-active: var(--traton-color-grey-100);
   --component-folder-tabs-scroll-button-text-default: var(--traton-color-transparent-600);
-  --component-folder-tabs-tab-background-default: var(--traton-color-grey-50);
+  --component-folder-tabs-tab-background-default: var(--traton-color-grey-200);
   --component-folder-tabs-tab-background-hover: var(--traton-color-grey-100);
   --component-folder-tabs-tab-background-selected-primary: var(--traton-color-grey-100);
   --component-folder-tabs-tab-background-selected-secondary: var(--traton-color-grey-50);
